simpler restriction, no stretch profile picture and fixed login bug

--- a/src/App.css
+++ b/src/App.css
@@ -485,7 +485,7 @@ pointer-events: none;
   font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 
-input.ant-input, .ant-select, .ant-select-selection, .ant-input-number, .ant-input-number-input, .ant-time-picker-input{
+input.ant-input, .ant-select, .ant-select-selection, .ant-input-number, .ant-input-number-input, .ant-time-picker-input, .ant-calendar-picker{
   background-color: #eee;
   width:100%;
 }
@@ -541,7 +541,9 @@ table.review_luggage td b,
 table.review_luggage thead th,
 .sq-input-wrapper label,
 .ant-alert-message,
-.promostatus{
+.promostatus,
+.updateStatus,
+.callout{
   font-size: 14px;
   font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
@@ -581,7 +583,7 @@ span.ant-input-group-addon{
 
 .containerHistory{
   width: 80%;
-  margin: 0 auto; 
+  margin: 0 auto 50px auto; 
 }
 
 .containerBooking{
@@ -598,6 +600,42 @@ span.ant-input-group-addon{
 .ant-layout-header li, .ant-layout-header li a{
   font-size: 14px;
   font-family: "Monospaced Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
+
+div.callout {
+  height: 50px;
+  width: 200px;
+  float: left;
+}
+
+div.callout {
+  background-color: #2a6fb3;
+  background-image: -moz-linear-gradient(top, #2a6fb3, #2a6fb3);
+  position: absolute;
+  color: #F1CF46;
+  padding: 2px;
+  border-radius: 3px;
+  box-shadow: 0px 2px 5px #333;
+  margin: 25px 25px 25px 100px;
+  top: -40px;
+  min-height: 50px;
+  border: 1px solid #2a6fb3;
+  
+  /*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
+}
+
+.callout::before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border: 0.8em solid transparent;
+  position: absolute;
+}
+
+.callout.right::before {
+  left: -20px;
+  top: 30%;
+  border-right: 10px solid #2a6fb3;
 }
 
 /* header styles */
@@ -620,7 +658,7 @@ span.ant-input-group-addon{
 
 .luggage-blue{
   background-color: #2a6fb3;
-  color: #2a6fb3;
+  color: black;
 }
 
 .luggage-yellow{
@@ -640,24 +678,34 @@ span.ant-input-group-addon{
 .containerProfile{
   width: 25%;
   min-width: 280px;
-  margin: 0 auto 50px auto; 
+  margin: 0 auto 30px auto; 
   background-color: white;
 }
 
 .profilePicture{
-  padding: 40px 60px;
+  padding: 40px 60px 20px 60px;
 }
 
-.profilePicture img{
+.profilePicture .pic{
   width: 160px;
-  height: auto;
-  border-radius: 50%;
-  display: block;
+ height: 160px;
+ background-size: cover;
+ background-position: center center;
+ display: block;
+ border-radius: 50%;
+ -webkit-border-radius: 50%;
+ -moz-border-radius: 50%;
   margin: auto;
 }
 
-.profilePicture img:hover{
+.profilePicture .pic:hover{
   opacity: 0.8;
+}
+
+.updateStatus{
+  margin: 10px 0;
+  color: green;
+  text-align: center;
 }
 
 /* end profile styles */
